# cplex-labs-hse

./: heuristic.py  main.py
cplex-cpp/: .gitignore  CMakeLists.txt  base.xlsx  bnb.csv  cplex float.xlsx  cplex int.csv  cplex int.xlsx
cplex-cpp/modules/: CMakeLists.txt
cplex-cpp/modules/cplex-bnb-cpp/include/: configuration.h  constants.h  cplex_model.h  cql_graph.h  csv_writer.h  local_search.h  max_clique_solver.h  shared.h  shared.hpp  utils.h
cplex-cpp/modules/cplex-bnb-cpp/src/: CMakeLists.txt  cplex_model.cpp  cql_graph.cpp  csv_writer.cpp  local_search.cpp  main.cpp  max_clique_solver.cpp
cplex-cpp/modules/cplex-bnc-cpp/src/: CMakeLists.txt  main.cpp
cplex-cpp/modules/mcp-cplex-bnb-cpp/include/: constants.h  shared.h  utils.h
cplex-cpp/modules/mcp-cplex-bnb-cpp/src/: CMakeLists.txt  cplex_model.cpp  max_clique_solver.cpp
cplex-cpp/modules/mcp-cplex-bnc-cpp/: CMakeLists.txt
cplex-cpp/modules/vcp-cplex-bnp-cpp/include/: constants.h  cplex_model.h  cql_graph.h  local_search.h  main_cplex_model.h  shared.h  slave_cplex_model.h  vertex_coloring_solver.h
cplex-cpp/modules/vcp-cplex-bnp-cpp/src/: CMakeLists.txt  cplex_model.cpp  cql_graph.cpp  local_search.cpp  main.cpp  main_cplex_model.cpp  shared.cpp  slave_cplex_model.cpp  slave_cplex_model.h  vertex_coloring_solver.cpp
cplex-cpp/results/: bnb.csv  cplex int.xlsx  results-1607354108.csv  results-1607374780.csv  results-1607375262.csv  results-1607382826.csv  results-1607410089.csv  results-1607424889.csv  results-1607425115 - Copy (2).csv  results-1607425115 - Copy (3).csv  results-1607425115 - Copy (4).csv  results-1607425115 - Copy.csv  results-1607425115.csv  results-1607427538 - Copy.csv  results-1607427538.csv  results-1607429354 - Copy.csv  results-1607429354.csv  results-1607430710.csv  results-1607431046 - Copy.csv  results-1607431046.csv  results-1607431487.csv  results-1607431588.csv  results-1607444317.csv  results-1607444405 - Copy (2).csv  results-1607444405 - Copy (3).csv  results-1607444405 - Copy.csv  results-1607444405.csv  results-1607445286 - Copy (2).csv  results-1607445286 - Copy.csv  results-1607445532 - Copy (2).csv  results-1607445532 - Copy (3).csv  results-1607445532 - Copy (4).csv  results-1607445532 - Copy.csv
(+3 files in other folders)
